src/test/deca/context/invalid/created/SansObjet/NoInitializationVar.deca
// Description:
//    Teste la declaration d'une variable sans initialisation
// Resultats:
//   NoInitializationVar.deca:12:9: Error: Identifier 'm' is undefined

class A{

}

{
    A newA = new A();
    newA.m();
}